<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>SIFTTestTask</artifactId>
    <packaging>jar</packaging>
    <version>1.1.1.1</version>

    <properties>
        <jdkVersion>1.17</jdkVersion>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <product.company>VictorGavrilenko</product.company>
        <product.title>MergeSorting</product.title>
        <exeFileName>sort-it</exeFileName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.7.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.akathist.maven.plugins.launch4j</groupId>
            <artifactId>launch4j-maven-plugin</artifactId>
            <version>2.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.4.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>plugin-loader</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <headerType>console</headerType>
                            <outfile>${exeFileName}.exe</outfile>
                            <jar>target/${project.artifactId}-${project.version}.jar</jar>
                            <errTitle>${product.title}</errTitle>
                            <classPath>
                                <mainClass>MergeSorting</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <jre>
                                <path>../jre</path>
                                <minVersion>
                                    ${jdkVersion}
                                </minVersion>
                            </jre>
                            <versionInfo>
                                <fileVersion>${project.version}</fileVersion>
                                <fileDescription>Sort application</fileDescription>
                                <copyright>My copyright</copyright>
                                <productVersion>${project.version}</productVersion>
                                <companyName>${product.company}</companyName>
                                <productName>${product.title}</productName>
                                <internalName>${exeFileName}</internalName>
                                <originalFilename>${exeFileName}.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>